--- a/codigo-fonte/src/geral/margemPadrao.css
+++ b/codigo-fonte/src/geral/margemPadrao.css
@@ -1,6 +1,8 @@
 html,
 body {
-background-color: #2a1b3d;
-margin-right: 2%;
-margin-left: 2%;
+    background-color: #2a1b3d;
+    margin-right: 2%;
+    margin-left: 2%;
+    overflow-x: hidden;
+    max-width: 100%;
 }
