--- a/codigo-fonte/src/loginCadastro/loginCadastro.css
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.css
@@ -102,6 +102,45 @@ body {
   padding-bottom: 1.5rem;
 }
 
+/* ------------------ header ------------------ */
+
+@media (min-width: 768px) {
+  .navbar-custom {
+    padding-top: 25px;
+  }
+}
+
+.nav-link:hover {
+  font-size: 18px;
+  font-weight: 500;
+  transition: transform 0.4s ease-in-out;
+}
+
+.nav-link.active {
+  font-weight: 600;
+}
+
+.navbar-custom {
+  height: 45px;
+}
+
+.container-fluid {
+  background-color: #44318d;
+}
+
+.navbar-toggler {
+  border: none !important;
+  outline: none;
+}
+
+.margin-adjust {
+  margin-top: 190px;
+}
+
+#mainContent {
+  transition: margin 0.5s ease-in-out;
+}
+
 /* ------------------ Seção de estilização do switch --------------------*/
 
 .c-switch {
