--- a/codigo-fonte/src/projetos/projetos.css
+++ b/codigo-fonte/src/projetos/projetos.css
@@ -12,49 +12,68 @@
 --background-cards: white;
 --background-botao: #d83f87;
  */
-body{
-    margin: 0;
-    padding-top: 10px;
+ html{
     background-color: #2a1b3d;
+    margin-top: 8px;
+    margin-left: 4%;
+    margin-right: 4%;
+ } 
+ body{
+    background-color: #2a1b3d;
+    overflow-x: hidden;
+    max-width: 100%;
+
 }
-.corpo{
-    padding: 0px 10px 0px 10px;
-}
-.grid-wrapper{
-    display: grid;
-    grid-template-rows: repeat(5, auto);
-    grid-template-columns: repeat(3, 1fr);
+footer{
+    background-color: #2a1b3d;
+    height: auto;
 }
 header{
-    grid-column: 1 / -1;
-    grid-row: 1 / 2;
+    background-color: #2a1b3d;
 }
+
+
+.corpo{
+    padding-top: 35px;
+    padding-bottom: 20px;
+    margin: 0;
+    background-color: #2a1b3d;
+    padding-left: 2%;
+    padding-right: 2%;
+    overflow-x: hidden;
+
+}
+
+.grid-wrapper{
+    background-color: #2a1b3d;
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+    grid-template-columns: repeat(3, 1fr);
+    
+}
+
 .menu-categoria-1col{
     display: none;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 .menu-categoria {
     display: flex;
     flex-direction: column;
-    grid-row: 2 / 4;
+    grid-row: 1 / 2;
     border-radius: 15px;
     background-color: var(--background-cards);
-    box-shadow: 2px 1px 20px gray;
     height: 100%;
     align-content: flex-start;
     align-self: center;
+}
 
-}
-footer{
-    height: 1fr;
-    grid-column: 1 / -1;
-}
 .container-card {
     border-radius: 20px;
     min-height: 150px;
     background-color: var(--background-cards); 
     display: flex;
     flex-direction: column;
-    box-shadow: 2px 1px 20px gray;
     
 }
 .container-card h2{
@@ -145,7 +164,7 @@ footer{
     height: 50px;
     justify-content: center;
     align-items: center;
-    margin: 0;
+    
 }
 .lista-categoria-1col{
     overflow: hidden;
@@ -163,13 +182,9 @@ footer{
     
     .grid-wrapper{
         display: grid;
-        grid-template-rows: repeat(5, auto);
+        grid-template-rows: repeat(3, auto);
         grid-template-columns: repeat(1, 1fr);
         gap: 2rem;
-    }
-    .logotipo{
-        margin-top: 6px;
-        fill:gray;
     }
     .container-card {
         margin: 0px 10px 0px 10px;
@@ -200,16 +215,14 @@ footer{
         background-color: #d83f87;
         border-radius: 20px;
         color: white;
-        margin: 0;    
+        width: 100%; 
     }
     .botao-categoria-1col h2{
         font-size: 1.3em;
     }
     .menu-categoria-1col{
         background-color: var(--background-cards);
-        box-shadow:  1px 1px 15px gray;
         border-radius: 20px;
-        width: 100%;
     }
     .lista-categoria-1col ul{
         margin: 8px 0px 0px 0px;
@@ -222,7 +235,7 @@ footer{
     
     .grid-wrapper{
         display: grid;
-        grid-template-rows: repeat(5, auto);
+        grid-template-rows: repeat(3, auto);
         grid-template-columns: repeat(2, 1fr);
         row-gap: 1rem;
         column-gap: 10px;
@@ -233,8 +246,11 @@ footer{
         max-width: 100%;   
     }
     .menu-categoria {  
-        grid-row: 2 / 4;
+        grid-row: 1 / 3;
     }    
+    .navbar-custom {
+        padding-top: 25px;
+    }
 
 }
 
@@ -244,7 +260,7 @@ footer{
         display: grid;
         grid-template-rows: repeat(5, auto);
         grid-template-columns: repeat(3, 1fr);
-        gap: 2rem;
+        gap: 1.5rem;
 
     }
     .container-card {
@@ -256,7 +272,7 @@ footer{
     .menu-categoria {
         min-width: 260px;
         max-width: 100%;
-        grid-row: 2 / 4;
+        grid-row: 1 / 3;
     }
 }
 
@@ -264,30 +280,28 @@ footer{
 
     .grid-wrapper{
         display: grid;
-        grid-template-rows: repeat(5, auto);
+        grid-template-rows: repeat(3, auto);
         grid-template-columns: repeat(4, 1fr);
-        gap: 1rem;
+        column-gap: 0.1rem;
+        
 
     }
     .container-card {
-        
-        max-width: 300px;
-        min-height: 100px;
-        max-height: 300px;
-        
+        max-width: 260px;
+        margin:0;
     }
     .menu-categoria {
-        min-width: 250px;
-        max-width: 300px;
-        grid-row: 2 / 4;
-}
+        max-width: 260px;
+        grid-row: 1 / 3;
+    }
+
 }
 
 @media screen and (min-width: 1500px) {
 
     .grid-wrapper{
         display: grid;
-        grid-template-rows: repeat(5, auto);
+        grid-template-rows: repeat(3, auto);
         grid-template-columns: repeat(4, 1fr);
         gap: 2rem;
 
@@ -302,45 +316,7 @@ footer{
     .menu-categoria {
         min-width: 250px;
         max-width: 400px;
-        grid-row: 2 / 4;
+        grid-row: 1 / 3;
 }
 }
 
-
-@media (min-width: 768px) {
-    .navbar-custom {
-        padding-top: 25px;
-    }
-}
-
-@media (min-width: 768px) {
-    .navbar-custom {
-        padding-top: 25px;
-    }
-}
-
-.nav-link:hover {
-    transform: scale(1.2);
-    transition: transform 0.2s ease-in-out;
-}
-
-.nav-link.active {
-    font-weight: 600;
-}
-
-.navbar-custom {
-    height: 45px;
-}
-
-.container-fluid {
-    background-color: #44318d;
-}
-
-.navbar-toggler {
-    border: none;
-    outline: none;
-}
-
-.margin-adjust {
-    margin-top: 140px;
-}
