--- a/codigo-fonte/src/homePage/css/style.css
+++ b/codigo-fonte/src/homePage/css/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .section-1 {
-    margin-top: 4%;
+    margin-top: 6% !important;
 }
 
 @media (max-width: 767px) {
@@ -31,7 +31,7 @@ body {
     }
 
     .section-1 {
-        margin-top: 4%;
+        margin-top: 14% !important;
     }
 }
 
