--- a/codigo-fonte/src/projetos/modal.css
+++ b/codigo-fonte/src/projetos/modal.css
@@ -1,6 +1,7 @@
 .modal-container{
     
     display: none;
+    margin:0;
     position:relative;
     position: fixed;
     z-index: 5;
@@ -11,55 +12,113 @@
     align-items: center;
     justify-content: center;
     align-content: center;
-    background-color:rgba(15, 15, 15, 0.1);
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
+    background-color:rgba(0, 0, 0, 0.0);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
 }
 .modal-body{
+    display: flex;
+    flex-direction: column;
     text-align: center;
     padding: 15px;
     margin: 10%;
-    flex-direction: column;
     border-radius: 10px;
-    background-color: white;
+    background-color: #2a1b3d;
     width: 60%;
-    height: 60%;
-    box-shadow: 2px 2px 25px gray; 
     overflow: hidden;
+
+}
+.modal-header{
+    position: relative;
+    height: 80px;
+    background-color: #d83f87;
+}
+.modal-imagem-container{
+    margin: 0;
+    height: 300px;
+    background: url("images/imagem-voluntarios-01.jpg");
+    background-repeat: no-repeat;
+    background-size:cover;
+    
+}
+.modal-footer{
+    display: flex;
+    align-self: center;
+    margin: 0;
+    min-height: 80px;
+    max-height: 80px;
+}
+.modal-titulo{
+    display: block;
+    width: 100%;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 }
 .fechar-modal{
     display: flex;
 }
-.modal-titulo{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.modal-descricao-container{
+    display: block;
+    width: 100%;
+    padding-bottom: 50px;
+    margin: 0;
+    background-color: #2a1b3d;
+
 }
 .modal-descricao{
+    padding: 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+}
+.modal-dados-empresa-horas{
+    position: relative;
+    height: 150px;
+    background-color: white;
+}
+.img-empresa{
+    width: 80px;
+}
+.img-horas{
+    width: 80px;
 }
 .modal-empresa{
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 40%;
     display: inline-block;
+    position: absolute;
+    top: -40px;
+    right: 10%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     
 }
 .modal-horas{
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 40%;
     display: inline-block;
+    position: absolute;
+    top: -40px;
+    left: 10%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
 }
 .btn-participar{
     cursor: pointer;
     border-radius: 10px;
-    padding: 8px 10px 8px 10px;
+    padding: 3px 10px 3px 10px;
     text-align: center;
     width: 150px;
     display: inline-block;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #d83f87;
     color: white;
+    font-size: 1.15em;
 }
 .modal-dados-empresa-horas{
+    font-size: 1.1em;
     width: 100%;
+    height: 200px;
     display: flex;
     justify-content: space-between;
     padding-left: 50px;
@@ -70,74 +129,31 @@
     top: 5px;
     right: 5px;
     height: 1.5rem;
-    fill: #44318d;
+    fill: white;
     align-self: flex-end;
     cursor: pointer;
 }
-.modal-img{
-    display: inline-block;
+@media screen and (max-width: 576px)  {
+    .modal-empresa{
+        width: 100%;
+        position:relative;
+        top: auto;
+        left: auto;
+        right: auto;
+    }
+    .modal-horas{    
+        width: 100%;  
+        position:relative;
+        top: auto;
+        left: auto;
+        right: auto;
+
+    }
+    .modal-dados-empresa-horas{
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
+    
 }
 
-
-@media screen and (max-width: 576px){
-    .modal-body{
-        width: 95%;
-        padding: 15px;
-        box-sizing: border-box;
-    }
-    .modal-img{
-        width: auto;
-        max-width: 200px;
-    }
-
-}
-
-@media screen and (min-width: 577px){
-    .modal-body{
-        width: 80%;
-        padding: 15px;
-        box-sizing: border-box;
-    }
-    .modal-img{
-      
-        max-width: 40%;
-    } 
-}
-
-@media screen and (min-width: 992px) {
-
-    .modal-body{
-        max-width: 50%;
-        padding: 15px;
-        box-sizing: border-box;
-    }
-    .modal-img{
-        
-        width: auto;
-        max-width: 350px;
-    }
-}
-@media screen and (min-width: 1200px){
-    .modal-body{
-        max-width: 60%;
-        padding: 15px;
-        box-sizing: border-box;
-    }
-    .modal-img{
-        width: auto;
-        max-width: 300px;
-    }
-}
-@media screen and (min-width: 1500px){
-    .modal-body{
-        max-width: 45%;
-        padding: 15px;
-        box-sizing: border-box;
-    }
-    .modal-img{
-        width: auto;
-        min-width: 30%;
-        max-width: 35%;
-
-    }
-}
