--- a/codigo-fonte/src/projetos/modal.css
+++ b/codigo-fonte/src/projetos/modal.css
@@ -25,6 +25,7 @@
     border-radius: 10px;
     background-color: #2a1b3d;
     width: 60%;
+    height: 80%;
     overflow: hidden;
 
 }
@@ -45,8 +46,7 @@
     display: flex;
     align-self: center;
     margin: 0;
-    min-height: 80px;
-    max-height: 80px;
+    height: 100px;
 }
 .modal-titulo{
     display: block;
@@ -61,6 +61,7 @@
 .modal-descricao-container{
     display: block;
     width: 100%;
+    
     padding-bottom: 50px;
     margin: 0;
     background-color: #2a1b3d;
