--- a/codigo-fonte/src/perfilEmpresa/perfilEmpresa.css
+++ b/codigo-fonte/src/perfilEmpresa/perfilEmpresa.css
@@ -14,7 +14,12 @@ body {
 }
 
 .btn-secondary {
-    background-color: #d83f87;
+    background-color: var(--cor-2);
+    border: none;
+}
+
+.btn-secondary:hover {
+    background-color: var(--cor-1);
     border: none;
 }
 
@@ -24,9 +29,21 @@ body {
     object-fit: cover;
     padding: 8px;
     margin-bottom: 120px;
+    margin-top: 20px;
+}
+
+.margin {
+    margin-bottom: 20px;
 }
 
 .equal-height-rows {
     display: flex;
     flex-wrap: wrap;
 }
+
+.section-1{
+    margin-bottom: 120px;
+    white-space: nowrap;
+}
+
+
