--- a/codigo-fonte/src/projetos/modal.css
+++ b/codigo-fonte/src/projetos/modal.css
@@ -66,15 +66,15 @@
 .modal-descricao-container{
     display: block;
     width: 100%;
-    padding-bottom: 10px;
     margin: 0;
     background-color: #2a1b3d;
 
 }
 .modal-descricao{
-    padding: 15px;
+    padding: 25px 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
+    margin: 0;
 }
 .modal-dados-empresa-horas{
     position: relative;
