--- a/codigo-fonte/src/projetos/projetos.css
+++ b/codigo-fonte/src/projetos/projetos.css
@@ -9,7 +9,6 @@
 
  html{
     background-color: #2a1b3d;
-    margin-top: 8px;
     margin-left: 4%;
     margin-right: 4%;
  } 
@@ -27,10 +26,10 @@ header{
     background-color: #2a1b3d;
 }
 
+
 .corpo{
     padding-top: 20px;
     padding-bottom: 20px;
-    margin: 0;
     background-color: #2a1b3d;
     padding-left: 2%;
     padding-right: 2%;
@@ -258,9 +257,17 @@ header{
         grid-row: 1 / 3;
     }    
     .navbar-custom {
-        padding-top: 25px;
+        /* padding-top: 25px; */
     }
 
+}
+@media  screen and (min-width: 768px) {
+   .navbar{
+    margin-top: 7px;
+   }
+   .corpo{
+    padding-top: 12px;
+   }
 }
 
 @media screen and (min-width: 992px) {
@@ -327,5 +334,6 @@ header{
         max-width: 400px;
         grid-row: 1 / 3;
 }
+
 }
 
