--- a/codigo-fonte/src/perfilVoluntario/css/perfilVoluntarioo.css
+++ b/codigo-fonte/src/perfilVoluntario/css/perfilVoluntarioo.css
@@ -48,3 +48,17 @@ body {
 .section-3 {
     margin-bottom: 120px;
 }
+
+.btn-back {
+    display: none;
+    cursor: pointer;
+    color: white;
+}
+
+.btn-next {
+    display: none;
+    cursor: pointer;
+    color: white;
+
+    
+}
