--- a/codigo-fonte/src/projetos/projetos.css
+++ b/codigo-fonte/src/projetos/projetos.css
@@ -6,6 +6,9 @@
   --background-white: #2a1b3d;
 
 }
+main{
+    background-color: #2a1b3d;
+}
 
  html{
     background-color: #2a1b3d;
@@ -44,9 +47,7 @@ header{
     
 }
 
-.my-4{
-    
-}
+
 .menu-categoria-1col{
     display: none;
     margin-left: 15px;
