feat: imprimir media query

--- a/codigo-fonte/src/certificacao/certificacao.css
+++ b/codigo-fonte/src/certificacao/certificacao.css
@@ -40,3 +40,25 @@ body {
     background-color: var(--cor-1);
     border: none;
 }
+
+@media print {
+    /* Estilos para a impressão */
+    body {
+      /* Exemplo de estilo: fonte maior para impressão */
+      font-size: 16px;
+    }
+    header{
+        display: none;
+    }
+    footer{
+        display: none;
+    }
+    #imprimirButton{
+        display: none;
+
+    }
+    #certificacaoId{
+        border: 0;
+    }
+
+}
