--- a/codigo-fonte/src/cadastroProjeto/css/cadastroProjeto.css
+++ b/codigo-fonte/src/cadastroProjeto/css/cadastroProjeto.css
@@ -1,128 +1,131 @@
 :root {
-    --cor-1: #7f66a7;
-    --cor-2: #d83f87;
-    --cor-3: #2a1b3d;
+  --cor-1: #7f66a7;
+  --cor-2: #d83f87;
+  --cor-3: #2a1b3d;
 }
 
 html,
 body {
-    background-color: var(--cor-3);
-    margin-right: 2%;
-    margin-left: 2%;
-    overflow-x: hidden;
-    max-width: 100%;
+  background-color: var(--cor-3);
+  margin-right: 2%;
+  margin-left: 2%;
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
 .card {
-    max-width: 1200px;
+  max-width: 1200px;
 }
 
 .btn-secondary {
-    background-color: #d83f87;
-    border: none;
+  background-color: #d83f87;
+  border: none;
 }
 
 .btn-secondary:hover {
-    background-color: #7f66a7;
+  background-color: #7f66a7;
 }
-
 
 /* BOLINHAS DE FUNDO */
 
 @keyframes sway {
-    0% {
-        transform: translateX(-5px);
-    }
+  0% {
+    transform: translateX(-5px);
+  }
 
-    100% {
-        transform: translateX(5px);
-    }
+  100% {
+    transform: translateX(5px);
+  }
 }
 
 .circle-1 {
-    width: 120px;
-    height: 120px;
-    background-color: #d83f87;
-    border-radius: 50%;
-    position: absolute;
-    animation: sway 2s infinite alternate ease-in-out;
-    left: -40px;
-    top: 60px;
+  width: 120px;
+  height: 120px;
+  background-color: #d83f87;
+  border-radius: 50%;
+  position: absolute;
+  animation: sway 2s infinite alternate ease-in-out;
+  left: -40px;
+  top: 60px;
 }
 
 .circle-2 {
-    width: 100px;
-    height: 100px;
-    background-color: var(--cor-1);
-    border-radius: 50%;
-    position: absolute;
-    animation: sway 2s infinite alternate ease-in-out;
-    right: -30px;
-    top: -30px;
+  width: 100px;
+  height: 100px;
+  background-color: var(--cor-1);
+  border-radius: 50%;
+  position: absolute;
+  animation: sway 2s infinite alternate ease-in-out;
+  right: -30px;
+  top: -30px;
 }
 
 .circle-3 {
-    width: 120px;
-    height: 120px;
-    background-color: #d83f87;
-    border-radius: 50%;
-    position: absolute;
-    animation: sway 2s infinite alternate ease-in-out;
-    right: 90px;
-    top: 300px;
+  width: 120px;
+  height: 120px;
+  background-color: #d83f87;
+  border-radius: 50%;
+  position: absolute;
+  animation: sway 2s infinite alternate ease-in-out;
+  right: 90px;
+  top: 300px;
 }
 
 .circle-4 {
-    width: 160px;
-    height: 160px;
-    background-color: #d83f87;
-    border-radius: 50%;
-    position: absolute;
-    animation: sway 2s infinite alternate ease-in-out;
-    left: -40px;
-    top: 600px;
+  width: 160px;
+  height: 160px;
+  background-color: #d83f87;
+  border-radius: 50%;
+  position: absolute;
+  animation: sway 2s infinite alternate ease-in-out;
+  left: -40px;
+  top: 600px;
 }
 
 .circle-5 {
-    width: 200px;
-    height: 200px;
-    background-color: #d83f87;
-    border-radius: 50%;
-    position: absolute;
-    animation: sway 2s infinite alternate ease-in-out;
-    right: 180px;
-    top: 780px;
+  width: 200px;
+  height: 200px;
+  background-color: #d83f87;
+  border-radius: 50%;
+  position: absolute;
+  animation: sway 2s infinite alternate ease-in-out;
+  right: 180px;
+  top: 780px;
 }
 
 .circle-6 {
-    width: 100px;
-    height: 100px;
-    background-color: var(--cor-1);
-    border-radius: 50%;
-    position: absolute;
-    animation: sway 2s infinite alternate ease-in-out;
-    right: -15px;
-    top: 600px;
+  width: 100px;
+  height: 100px;
+  background-color: var(--cor-1);
+  border-radius: 50%;
+  position: absolute;
+  animation: sway 2s infinite alternate ease-in-out;
+  right: -15px;
+  top: 600px;
 }
 
 .circle-7 {
-    width: 160px;
-    height: 160px;
-    background-color: var(--cor-1);
-    border-radius: 50%;
-    position: absolute;
-    animation: sway 2s infinite alternate ease-in-out;
-    left: 150px;
-    top: 870px;
+  width: 160px;
+  height: 160px;
+  background-color: var(--cor-1);
+  border-radius: 50%;
+  position: absolute;
+  animation: sway 2s infinite alternate ease-in-out;
+  left: 150px;
+  top: 870px;
 }
 
 .circle-8 {
-    width: 80px;
-    height: 80px;
-    background-color: var(--cor-1);
-    border-radius: 50%;
-    position: absolute;
-    animation: sway 2s infinite alternate ease-in-out;
-    left: 140px;
-    top: 300px;
+  width: 80px;
+  height: 80px;
+  background-color: var(--cor-1);
+  border-radius: 50%;
+  position: absolute;
+  animation: sway 2s infinite alternate ease-in-out;
+  left: 140px;
+  top: 300px;
+}
+
+textarea {
+  resize: none;
 }
