--- a/codigo-fonte/src/loginCadastro/loginCadastro.css
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.css
@@ -205,15 +205,15 @@ body {
   transition: 0.4s;
 }
 
-input:checked + .slider {
+input:checked+.slider {
   background-color: var(--register-color);
 }
 
-input:focus + .slider {
+input:focus+.slider {
   box-shadow: 0 0 1px var(--register-color);
 }
 
-input:checked + .slider:before {
+input:checked+.slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
@@ -301,7 +301,8 @@ input:checked + .slider:before {
   box-sizing: border-box;
   border: 0.4rem solid var(--register-color);
   color: black;
-  transform: rotateY(180deg) translateZ(1px); /* Adiciona a transformação translateZ(1px) */
+  transform: rotateY(180deg) translateZ(1px);
+  /* Adiciona a transformação translateZ(1px) */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -350,6 +351,5 @@ input:checked + .slider:before {
 }
 
 .header-menu {
-  width: 91.209%;
-  padding-top: 0.5rem;
+  width: 86%;
 }
